# trade

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/stock_screening_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stock_system/: __init__.py  analysis.py  backtest.py  cli.py  db.py  fetchers.py  metrics.py  screening.py
tests/: test_backtest.py  test_db.py  test_metrics.py  test_screening.py
