[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-screening-system"
version = "0.1.0"
description = "Stock screening and backtesting system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
